# os_lab_4

./: CMakeLists.txt  funcs.h  main_1.c  main_2.c  realization1.c  realization2.c
doc/: report4.docx
src/: funcs.h
